# optuna-dashboard

./: .coveragerc  .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .readthedocs.yaml  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  MD Bug.ipynb  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  Untitled.ipynb  biome.json  integration_tests.py  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py  start.sh  tox.ini  tsconfig.json  visual_regression_test.py  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  question.md
.github/workflows/: docker-ghcr.yml  e2e-dashboard-tests.yml  e2e-standalone-tests.yml  e2e-tests.yml  gh-pages.yml  github-release.yml  integration-tests.yml  jupyterlab-pypi-publish.yml  jupyterlab-tests.yml  pypi-publish.yml  python-coverage.yml  python-tests.yml  stale.yml  typescript-checks.yml  typescript-lints.yml  typescript-tests.yml
.ipynb_checkpoints/: MD Bug-checkpoint.ipynb
dashboard/: app.py  cli.py  serializer.py
docker/: check_mysql.sh  check_postgres.sh  optuna_example.py
docs/: api.rst  conf.py  configuration.rst  errors.rst  getting-started.rst  index.rst  installation.rst
docs/tutorials/: hitl.rst  index.rst  llm-integration.rst  opentelemetry.rst  preferential-optimization.rst
e2e_tests/: conftest.py  test_server.py  utils.py  visual_regression_test.py
e2e_tests/test_dashboard/: visual_regression_test.py
e2e_tests/test_standalone/: test_study_list.py
e2e_tests/test_usecases/: test_study_history.py
examples/: README.md
examples/hitl/: main.py
examples/preferential-optimization/: evaluator.py  generator.py
examples/streamlit_plugin/: rgb_evaluator.py
frontend_tests/: DataGrid.test.tsx  TrialTable.test.tsx
hack/: visual_regression_test.py
hack/check-docker-image/: check_mysql.sh
jupyerlab/: RELEASE.md  package.json  tsconfig.json
jupyerlab/jupyterlab_optuna/: handlers.py
jupyerlab/src/: apiClient.ts  handler.ts  index.ts  widget.tsx
jupyterlab/: .gitignore  README.md  install.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
jupyterlab/jupyterlab_optuna/: __init__.py  handlers.py
jupyterlab/src/: apiClient.ts  handler.ts  index.ts  widget.tsx
jupyterlab/style/: base.css
optuna_dashboard/: .gitignore  EP.py  __init__.py  _app.py  _bottle_util.py  _bottleutil.py  _cached_extra_study_property.py  _cli.py  _config.py  _custom_plot_data.py  _form_widget.py  _importance.py  _inmemory_cache.py  _intermediate_values.py  _named_objectives.py  _note.py  _objective_form_widget.py  _pareto_front.py  _preference_setting.py  _preferential_history.py  _rdb_migration.py  _serializer.py  _sql_profiler.py  _storage.py  _storage_url.py  _streamlit_helper.py  _trials.py  app.py  cli.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.mjs  search_space.py  serializer.py  tsconfig.json  tsconfig.pkg.json  webpack.config.js
optuna_dashboard/_fast_fanova/: evaluator.py  fanova.py  tree.pyx
optuna_dashboard/artifact/: __init__.py  _backend.py  _backend_to_store.py  backend.py  boto3.py  file_system.py  protocol.py
optuna_dashboard/llm/: _api_views.py  _backend.py  _prompt_templates.py  openai.py  provider.py
optuna_dashboard/preferential/: _history.py  _study.py  _system_attrs.py
optuna_dashboard/static/: action.ts  apiClient.ts  dateUtil.ts  index.tsx
optuna_dashboard/streamlit/: _streamlit_helper.py
optuna_dashboard/ts/: action.ts  apiClient.ts  apiClientProvider.tsx  axiosClient.ts  constantsProvider.tsx  dateUtil.ts  dominatedTrials.ts  fetchAPIClient.ts  graphUtil.ts  index.tsx  pkg_index.tsx  searchSpace.ts  state.ts  trialFilter.ts  urlQuery.ts
optuna_dashboard_client/: package-lock.json  package.json  tsconfig.json  webpack.config.js
optuna_dashboard_client/src/: dominatedTrials.ts  graphUtil.ts  index.tsx  state.ts  trialFilter.ts  urlQuery.ts
optuna_dashboard_client/tests/: DataGrid.test.tsx  searchSpace.test.ts
optuna_dashboard_client/web/: .env  .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
python_tests/: storage_supplier.py  test_api.py  test_boto3_artifact.py  test_cached_extra_study_property.py  test_cli.py  test_config.py  test_csv_download.py  test_custom_plot_data.py  test_file_system_artifact.py  test_form_widget.py  test_metric_names.py  test_note.py  test_preference_setting.py  test_preferential_history.py  test_search_space.py  test_serializers.py  test_storage_url.py  wsgi_client.py
python_tests/artifact/: stubs.py  test_backend.py  test_backoff.py  test_boto3.py  test_file_system.py  test_optuna_compatibility.py  test_prefix.py
python_tests/llm/: mock_openai.py  test_api_views.py  test_backend.py  test_openai_provider.py
python_tests/preferential/: test_history.py  test_samplers.py  test_study.py  test_system_attrs.py
python_tests/streamlit/: conftest.py  test_streamlit_helper.py
python_tests/test_fast_fanova/: test_fanova.py
rustlib/: Cargo.toml  build.sh  index.html
rustlib/src/: lib.rs
standalone_app/: github-pages.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  webpack.config.js
streamlit/: __init__.py  _streamlit_helper.py
streamlit_helper/: _streamlit_helper.py
tests/: test_api.py  test_search_space.py  test_serializers.py  wsgi_client.py  wsgi_utils.py
tslib/: biome.json  package-lock.json  package.json
typescript_tests/: DataGrid.test.tsx  TrialTable.test.tsx  searchSpace.test.ts
vite-project/: package-lock.json  package.json
vite_dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
vscode/: .eslintrc.json  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vsc-extension-quickstart.md  webpack.config.js
(+336 files in other folders)
