[metadata]
name = optuna-dashboard
version = attr: optuna_dashboard.version.__version__

url = https://github.com/optuna/optuna-dashboard
author = Masashi Shibata
author_email = m.shibata1020@gmail.com
description = Real-time dashboard for Optuna.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Science/Research

[options]
python_requires = >=3.6
include_package_data = False
packages = find:
install_requires =
    optuna>=2.4
    bottle
    typing-extensions;python_version<'3.8'
    scikit-learn

[options.entry_points]
console_scripts =
    optuna-dashboard = optuna_dashboard.cli:main

[options.package_data]
optuna_dashboard = public/*

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 99
statistics = True
exclude = venv,build,.tox

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True

[isort]
profile = black
src_paths =
    optuna_dashboard
    tests
line_length = 99
lines_after_imports = 2
force_single_line = True
force_sort_within_sections = True
order_by_type = False
